# fintest

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/finra_trio/: __about__.py  files.py  main.py
tests/: __init__.py  main_test.py
