[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finra-trio"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Max", email = "max@mxsmns.net" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "duckdb",
  "fsspec",
  "httpx",
  "pydantic",
  "python-json-logger",
  "tenacity",
  "trio",
  "tqdm",
]

[project.urls]
Documentation = "https://github.com/unknown/finra-trio#readme"
Issues = "https://github.com/unknown/finra-trio/issues"
Source = "https://github.com/unknown/finra-trio"

[project.scripts]
fq = "finra_trio.main:main"

[tool.hatch.version]
path = "src/finra_trio/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
  "coverage xml",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy",
  "pytest"
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/finra_trio tests}"

[tool.coverage.run]
source_pkgs = ["finra_trio", "tests"]
branch = true
parallel = true
omit = [
  "src/finra_trio/__about__.py",
]

[tool.coverage.paths]
finra_trio = ["src/finra_trio", "*/finra-trio/src/finra_trio"]
tests = ["tests", "*/finra-trio/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "fsspec.implementations.memory"
ignore_missing_imports = true